# ImageManager

./: .gitignore  CMakeLists.txt  FileException.h  Image.cpp  Image.h  ImageFormatException.h  ImageManager.cpp  ImageManager.h  ImageProcessor.cpp  ImageProcessor.h  ImageUtils.cpp  ImageUtils.h  PGM.cpp  PGM.h  main.cpp
NRC/: def.h  nrarith.c
images/: Route2.pgm  Route3.pgm  Route4.pgm  cubesx3.pgm  route0.pgm
images/set/: 133.ppm  14.ppm  16.ppm  176.ppm  19.ppm  225.ppm  27.ppm  32.ppm  35.ppm  407.ppm  466.ppm  57.ppm  64.ppm  92.ppm
